base/staging/docs/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  template:
    spec:
      nodeSelector:
        agentpool: stgpoolv1
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      containers:
        - name: docs
          readinessProbe:
            httpGet:
              path: /
          livenessProbe:
            httpGet:
              path: /
