base/staging/docs/ingress-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-vpn-web
  namespace: staging
spec:
  entryPoints:
    - web-vpn
  routes:
    - match: Host(`stg.docs.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: docs
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-vpn-websecure
  namespace: staging
spec:
  entryPoints:
    - websecure-vpn
  routes:
    - match: Host(`stg.docs.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: docs
          port: 80
  tls:
    secretName: staging-docs-vpn-tls
